adventure engine core implement, used in nakama

--- a/nakama/tsconfig.json
+++ b/nakama/tsconfig.json
@@ -9,6 +9,7 @@
     "target": "es5",
     "module": "ESNext",
     "strict": false,
+    "lib": ["es2015"]
   },
   "files": [
     "./node_modules/nakama-runtime/index.d.ts",
