--- a/adventure_engine/tsconfig.json
+++ b/adventure_engine/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": true,
+    "declaration": true,
     "noImplicitReturns": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
@@ -9,7 +10,8 @@
     "target": "es5",
     "module": "ESNext",
     "strict": false,
-    "lib": ["es2015"]
+    "lib": ["es2015"],
+    "outDir": "./dist"
   },
   "include": [
     "src/**/*",
