--- a/adventure_engine/package.json
+++ b/adventure_engine/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/jest": "^29.5.11",
+    "flatbuffers": "^23.5.26",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
