--- a/pixel-app/package.json
+++ b/pixel-app/package.json
@@ -21,6 +21,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@types/uuid": "^9.0.7",
+    "adventure_engine": "file:../adventure_engine",
     "autoprefixer": "10.4.16",
     "bufferutil": "^4.0.7",
     "eslint": "8.49.0",
