--- a/nakama/package.json
+++ b/nakama/package.json
@@ -24,6 +24,7 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "adventure_engine": "file:../adventure_engine",
     "flatbuffers": "^23.5.26",
     "nakama-runtime": "github:heroiclabs/nakama-common"
   }
